@@ -37,6 +37,7 @@ PQXX_HAVE_SLEEP	internal	compiler
 PQXX_HAVE_STREAMBUF	public	compiler
 PQXX_HAVE_STRERROR_R	internal	compiler
 PQXX_HAVE_STRING_CLEAR	internal	compiler
+PQXX_HAVE_STRNLEN	internal	compiler
 PQXX_HAVE_SYS_SELECT_H	internal	compiler
 PQXX_SEEKDIRS_MATCH_C	internal	compiler
 PQXX_PQ_IN_NAMESPACE	public	compiler
