@@ -367,7 +367,6 @@ AC_TRY_COMPILE([#include<${with_postgres_include}/libpq-fe.h>
 AC_MSG_RESULT($lotell)
 
 
-# Check presence and version of strerror_r()
 AC_MSG_CHECKING([for strerror_r])
 strerror_r=yes
 AC_TRY_COMPILE(
@@ -387,6 +386,17 @@ This may be because your implementation strerror() is threadsafe, in which case
 there is nothing to worry about.
 ])
 fi # strerror_r
+
+
+AC_MSG_CHECKING([for strnlen])
+strnlen=yes
+AC_TRY_COMPILE(
+	[#include <cstring>
+	${usestd}],
+	[return strnlen("",1)],
+	[AC_DEFINE(PQXX_HAVE_STRNLEN,1,[Define if strnlen exists])],
+	[strnlen=no])
+AC_MSG_RESULT($strnlen)
 
 
 AC_MSG_CHECKING([for long double])
